Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)
* Do not compute shipment cost when not shipping goods
* Do not recompute returned shipment cost
* Do not match carrier selection with countries if countries are unknown

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Invoice shipment cost when at least one shipment is done
* Use price_digits for storing cost

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)

Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)
* Use Carrier Selection instead of a company wise default value

Version 4.0.0 - 2016-05-02
* Bug fixes (see mercurial logs for details)
* Add Python3 support

Version 3.8.0 - 2015-11-02
* Bug fixes (see mercurial logs for details)

Version 3.6.0 - 2015-04-20
* Bug fixes (see mercurial logs for details)
* Add support for PyPy
* Set sale shipment cost on sale only at quotation
* Allow to change the carrier until the shipment is done

Version 3.4.0 - 2014-10-20
* Bug fixes (see mercurial logs for details)

Version 3.2.0 - 2014-04-21
* Bug fixes (see mercurial logs for details)

Version 3.0.0 - 2013-10-21
* Bug fixes (see mercurial logs for details)

Version 2.8.0 - 2013-04-22
* Bug fixes (see mercurial logs for details)

Version 2.6.0 - 2012-10-22
* Bug fixes (see mercurial logs for details)

Version 2.4.0 - 2012-04-24
* Bug fixes (see mercurial logs for details)

Version 2.2.0 - 2011-10-25
* Bug fixes (see mercurial logs for details)

Version 2.0.0 - 2011-10-17
* Initial release