@@ -1,3 +1,6 @@
+* Invoice shipment cost with cost method on order and invoice method on
+  shipment when at least one shipment is done.
+
 Version 4.8.0 - 2018-04-23
 * Bug fixes (see mercurial logs for details)
 * Do not compute shipment cost when not shipping goods
